install/grafana-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - name: grafana
      protocol: TCP
      targetPort: 3000
      port: 80
