install/grafana-http-proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  annotations:
    sas.com/component-name: grafana
    sas.com/kustomize-base: base
    sas.com/tls-mode: full-stack
  labels:
    app.kubernetes.io/name: grafana
  name: grafana
spec:
  routes:
    - conditions:
        - prefix: /grafana
      loadBalancerPolicy:
        strategy: Cookie
      pathRewritePolicy:
        replacePrefix:
          - replacement: /grafana/
      services:
        - name: grafana
          port: 80
      timeoutPolicy:
        response: 300s
    - conditions:
        - prefix: /grafana/
      enableWebsockets: true
      loadBalancerPolicy:
        strategy: Cookie
      services:
        - name: grafana
          port: 80
      timeoutPolicy:
        response: 300s
